==> apache/nuttx/arch/arm/src/s32k1xx/s32k1xx_pwm.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <stdio.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/timers/pwm.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "arm_arch.h"
#include "chip.h"
#include "s32k1xx_clockconfig.h"
#include "s32k1xx_pin.h"
#include "s32k1xx_pwm.h"
#include "hardware/s32k1xx_gpio.h"
#include "hardware/s32k1xx_ftm.h"
#include "hardware/s32k1xx_sim.h"
#  define pwm_dumpgpio(p,m) s32k1xx_pindump(p,m)
#  define pwm_dumpgpio(p,m)
#  define pwm_dumpregs(priv,msg)

static int pwm_timer(FAR struct s32k1xx_pwmtimer_s *priv,
                     FAR const struct pwm_info_s *info)
{
  /* Calculated values */

  uint32_t prescaler;
  uint32_t tpmclk;
  uint32_t modulo;
  uint32_t regval;
  uint32_t cv;
  uint8_t i;

  static const uint8_t presc_values[8] = {1, 2, 4, 8, 16, 32, 64, 128};

  /* Register contents */

  DEBUGASSERT(priv != NULL && info != NULL);

  pwminfo("FTM%d channel: %d frequency: %d duty: %08x\n",
          priv->tpmid, priv->channel, info->frequency, info->duty);

  DEBUGASSERT(info->frequency > 0 && info->duty > 0 &&
              info->duty < uitoub16(100));

  /* Calculate optimal values for the timer prescaler and for the timer modulo
   * register.  If' frequency' is the desired frequency, then
   *
   *   modulo = tpmclk / frequency
   *   tpmclk = pclk / presc
   *
   * Or,
   *
   *   modulo = pclk / presc / frequency
   *
   * There are many solutions to do this, but the best solution will be the
   * one that has the largest modulo value and the smallest prescaler value.
   * That is the solution that should give us the most accuracy in the timer
   * control.  Subject to:
   *
   *   1 <= presc  <= 128 (need to be 1, 2, 4, 8, 16, 32, 64, 128)
   *   1 <= modulo <= 65535
   *
   * So presc = pclk / 65535 / frequency would be optimal.
   *
   * Example:
   *
   *  pclk      = 24 MHz
   *  frequency = 100 Hz
   *
   *  prescaler = 24,000,000 / 65,535 / 100
   *            = 3.6 (or 4 -- taking the ceiling always)
   *  timclk    = 24,000,000 / 4
   *            = 6,000,000
   *  modulo    = 6,000,000 / 100
   *            = 60,000
   */

  prescaler = (priv->pclk / info->frequency + 65534) / 65535;

  for (i = 0; i < 7; i++)
    {
      if (prescaler <= presc_values[i])
        {
           break;
        }
    }

  prescaler = i;

  tpmclk = priv->pclk / presc_values[prescaler];

  modulo = tpmclk / info->frequency;
  if (modulo < 1)
    {
      modulo = 1;
    }
  else if (modulo > 65535)
    {
      modulo = 65535;
    }

  /* Duty cycle:
   *
   * duty cycle = cv / modulo (fractional value)
   */

  cv = b16toi(info->duty * modulo + b16HALF);

  pwminfo("FTM%d PCLK: %d frequency: %d FTMCLK: %d prescaler: %d modulo: %d \
           c0v: %d\n",
          priv->tpmid, priv->pclk, info->frequency, tpmclk,
          presc_values[prescaler], modulo, cv);

  /* Disable FTM and reset CNT before writing MOD and PS */

  pwm_putreg(priv, S32K1XX_FTM_SC_OFFSET, FTM_SC_CLKS_DIS);
  pwm_putreg(priv, S32K1XX_FTM_CNT_OFFSET, 0);

  /* Set the modulo value */

  pwm_putreg(priv, S32K1XX_FTM_MOD_OFFSET, (uint16_t)modulo);

  /* Set the duty cycle for channel specific */

  switch (priv->channel)
    {
      case 0:  /* PWM Mode configuration: Channel 0 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C0SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C0V_OFFSET, (uint16_t) cv);
        }
        break;

      case 1:  /* PWM Mode configuration: Channel 1 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C1SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C1V_OFFSET, (uint16_t) cv);
        }
        break;

      case 2:  /* PWM Mode configuration: Channel 2 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C2SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C2V_OFFSET, (uint16_t) cv);
        }
        break;

      case 3:  /* PWM Mode configuration: Channel 3 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C3SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C3V_OFFSET, (uint16_t) cv);
        }
        break;

      case 4:  /* PWM Mode configuration: Channel 4 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C4SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C4V_OFFSET, (uint16_t) cv);
        }
        break;

      case 5:  /* PWM Mode configuration: Channel 5 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C5SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C5V_OFFSET, (uint16_t) cv);
        }
        break;

      case 6:  /* PWM Mode configuration: Channel 6 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C6SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C6V_OFFSET, (uint16_t) cv);
        }
        break;
      case 7:  /* PWM Mode configuration: Channel 7 */
        {
          pwm_putreg(priv, S32K1XX_FTM_C7SC_OFFSET,
                     FTM_CNSC_MSB | FTM_CNSC_ELSB);
          pwm_putreg(priv, S32K1XX_FTM_C7V_OFFSET, (uint16_t) cv);
        }
        break;

      default:
        pwmerr("ERROR: No such channel: %d\n", priv->channel);
        return -EINVAL;
    }

  /* Set prescaler and enable clock */

  regval = pwm_getreg(priv, S32K1XX_FTM_SC_OFFSET);
  regval &= ~(FTM_SC_PS_MASK);
  regval &= ~(FTM_SC_CLKS_MASK);
  regval |= prescaler | FTM_SC_CLKS_FTM;
  regval |= FTM_SC_PWMEN(priv->channel);
  pwm_putreg(priv, S32K1XX_FTM_SC_OFFSET, regval);

  pwm_dumpregs(priv, "After starting");
  return OK;
}

static int pwm_setup(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct s32k1xx_pwmtimer_s *priv = (FAR struct s32k1xx_pwmtimer_s *)dev;

  /* Note: The appropriate clock should for the right FTM device should
   * already be enabled in the board-specific s32k1xx_periphclocks.c file.
   */

  pwminfo("FTM%d pincfg: %08x\n", priv->tpmid, priv->pincfg);
  pwm_dumpregs(priv, "Initially");

  /* Configure the PWM output pin, but do not start the timer yet */

  s32k1xx_pinconfig(priv->pincfg);
  pwm_dumpgpio(priv->pincfg, "PWM setup");
  return OK;
}

static int pwm_shutdown(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct s32k1xx_pwmtimer_s *priv = (FAR struct s32k1xx_pwmtimer_s *)dev;
  uint32_t pincfg;

  pwminfo("FTM%d pincfg: %08x\n", priv->tpmid, priv->pincfg);

  /* Make sure that the output has been stopped */

  pwm_stop(dev);

  /* Then put the GPIO pin back to the default state */

  pincfg  = (priv->pincfg & ~(_PIN_MODE_MASK));
  pincfg |= GPIO_INPUT;
  s32k1xx_pinconfig(pincfg);
  return OK;
}

static int pwm_stop(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct s32k1xx_pwmtimer_s *priv = (FAR struct s32k1xx_pwmtimer_s *)dev;
  irqstate_t flags;

  pwminfo("FTM%d\n", priv->tpmid);

  /* Disable interrupts momentary to stop any ongoing timer processing and
   * to prevent any concurrent access to the reset register.
   */

  flags = enter_critical_section();

  /* Disable further interrupts and stop the timer */

  pwm_putreg(priv, S32K1XX_FTM_SC_OFFSET, FTM_SC_CLKS_DIS);
  pwm_putreg(priv, S32K1XX_FTM_CNT_OFFSET, 0);

  /* Determine which timer channel to clear */

  switch (priv->channel)
    {
      case 0:
        pwm_putreg(priv, S32K1XX_FTM_C0V_OFFSET, 0);
        break;

      case 1:
        pwm_putreg(priv, S32K1XX_FTM_C1V_OFFSET, 0);
        break;

      case 2:
        pwm_putreg(priv, S32K1XX_FTM_C2V_OFFSET, 0);
        break;

      case 3:
        pwm_putreg(priv, S32K1XX_FTM_C3V_OFFSET, 0);
        break;

      case 4:
        pwm_putreg(priv, S32K1XX_FTM_C4V_OFFSET, 0);
        break;

      case 5:
        pwm_putreg(priv, S32K1XX_FTM_C5V_OFFSET, 0);
        break;

      case 6:
        pwm_putreg(priv, S32K1XX_FTM_C6V_OFFSET, 0);
        break;

      case 7:
        pwm_putreg(priv, S32K1XX_FTM_C7V_OFFSET, 0);
        break;

      default:
        pwmerr("ERROR: No such channel: %d\n", priv->channel);
        return -EINVAL;
    }

  leave_critical_section(flags);

  pwm_dumpregs(priv, "After stop");
  return OK;
}
